Don't create new Booleans.
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk/core@396234 13f79535-47bb-0310-9956-ffa450edef68